Segundo teste de módulo

--- a/limpeza-tratamento-dados/tratamento-dados.ipynb
+++ b/limpeza-tratamento-dados/tratamento-dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,138 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>X0</th>\n",
-       "      <th>X1</th>\n",
-       "      <th>X2</th>\n",
-       "      <th>X3</th>\n",
-       "      <th>X4</th>\n",
-       "      <th>X4.1</th>\n",
-       "      <th>X6</th>\n",
-       "      <th>X7</th>\n",
-       "      <th>X8</th>\n",
-       "      <th>X9</th>\n",
-       "      <th>X10</th>\n",
-       "      <th>X11</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>619</td>\n",
-       "      <td>RS</td>\n",
-       "      <td>Feminino</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10134888.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>608</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>Feminino</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8380786</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11254258.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>502</td>\n",
-       "      <td>RS</td>\n",
-       "      <td>Feminino</td>\n",
-       "      <td>42</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1596608</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11393157.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>699</td>\n",
-       "      <td>RS</td>\n",
-       "      <td>Feminino</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9382663.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>850</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>Feminino</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12551082</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>790841.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   X0   X1  X2        X3  X4  X4.1        X6  X7  X8  X9         X10  X11\n",
-       "0   1  619  RS  Feminino  42     2         0   1   1   1  10134888.0    1\n",
-       "1   2  608  SC  Feminino  41     1   8380786   1   0   1  11254258.0    0\n",
-       "2   3  502  RS  Feminino  42     8   1596608   3   1   0  11393157.0    1\n",
-       "3   4  699  RS  Feminino  39     1         0   2   0   0   9382663.0    0\n",
-       "4   5  850  SC  Feminino  43     2  12551082   1   1   1    790841.0    0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importar dados\n",
     "dataset = pd.read_csv(\"./dados/Churn.csv\", sep=\";\")\n",
@@ -155,20 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(999, 12)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Tamanho\n",
     "dataset.shape\n"
@@ -176,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    998.000000\n",
+       "mean     648.605210\n",
+       "std       98.312117\n",
+       "min      376.000000\n",
+       "25%      580.000000\n",
+       "50%      653.000000\n",
+       "75%      721.000000\n",
+       "max      850.000000\n",
+       "Name: Score, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Explorar colunas numéricas\n",
     "# Score\n",
@@ -308,28 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    9.920000e+02\n",
-       "mean     3.528762e+07\n",
-       "std      5.305800e+08\n",
-       "min      9.677000e+03\n",
-       "25%      3.029011e+06\n",
-       "50%      8.703250e+06\n",
-       "75%      1.405213e+07\n",
-       "max      1.193469e+10\n",
-       "Name: Salario, dtype: float64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Salário\n",
     "dataset['Salario'].describe()"
@@ -395,20 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Verificando de NaN não existem mais\n",
     "dataset['Salario'].isnull().sum()"
@@ -416,9 +265,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Genero\n",
+       "F              2\n",
+       "Fem            1\n",
+       "Feminino     460\n",
+       "M              6\n",
+       "Masculino    521\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Genero, falta de padronização e NaN's\n",
     "agrupado = dataset.groupby(['Genero']).size()\n",
@@ -468,9 +334,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Genero\n",
+       "F              2\n",
+       "Fem            1\n",
+       "Feminino     460\n",
+       "M              6\n",
+       "Masculino    521\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visuaziando Resultado\n",
     "agrupado = dataset.groupby(['Genero']).size()\n",
@@ -530,9 +413,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>Genero</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Patrimonio</th>\n",
+       "      <th>Saldo</th>\n",
+       "      <th>Produtos</th>\n",
+       "      <th>TemCartCredito</th>\n",
+       "      <th>Ativo</th>\n",
+       "      <th>Salario</th>\n",
+       "      <th>Saiu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>81</td>\n",
+       "      <td>665</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>Feminino</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9664554</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17141366.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>81</td>\n",
+       "      <td>665</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>Feminino</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9664554</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17141366.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Id  Score Estado    Genero  Idade  Patrimonio    Saldo  Produtos  \\\n",
+       "80  81    665     RS  Feminino     34           1  9664554         2   \n",
+       "81  81    665     RS  Feminino     34           1  9664554         2   \n",
+       "\n",
+       "    TemCartCredito  Ativo     Salario  Saiu  \n",
+       "80               0      0  17141366.0     0  \n",
+       "81               0      0  17141366.0     0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dados duplicados, buscamoe pelo ID\n",
     "dataset[dataset.duplicated(['Id'], keep = False)]"
@@ -540,9 +508,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>Genero</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Patrimonio</th>\n",
+       "      <th>Saldo</th>\n",
+       "      <th>Produtos</th>\n",
+       "      <th>TemCartCredito</th>\n",
+       "      <th>Ativo</th>\n",
+       "      <th>Salario</th>\n",
+       "      <th>Saiu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Id, Score, Estado, Genero, Idade, Patrimonio, Saldo, Produtos, TemCartCredito, Ativo, Salario, Saiu]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Excluimos pelo ID\n",
     "dataset.drop_duplicates(subset=\"Id\", keep=\"first\", inplace=True)\n",
@@ -552,9 +571,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Estado\n",
+       "PR    257\n",
+       "RP      1\n",
+       "RS    477\n",
+       "SC    258\n",
+       "SP      4\n",
+       "TD      1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Estado fora do domínio\n",
     "agrupado = dataset.groupby(['Estado']).size()\n",
@@ -584,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +630,7 @@
        "530312491.4410027"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +760,7 @@
        "230               0      1  1.119812e+09     0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +782,7 @@
        "70518.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +844,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +992,7 @@
        "4               1      1    790841.0     0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,16 +1003,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(999, 12)"
+       "(998, 12)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
